--- a/security/internal_external-tls_mtls_confluent-rbac/confluent-platform-mtls-rbac.yaml
+++ b/security/internal_external-tls_mtls_confluent-rbac/confluent-platform-mtls-rbac.yaml
@@ -51,7 +51,7 @@ spec:
       externalAccess:
         type: loadBalancer
         loadBalancer:
-          domain: mydomain.com
+          domain: aksdomain.xyz
           brokerPrefix: b
           bootstrapPrefix: kafka
   authorization:
