--- a/security/internal_external-tls_mtls_confluent-rbac/ingress-service-hostbased.yaml
+++ b/security/internal_external-tls_mtls_confluent-rbac/ingress-service-hostbased.yaml
@@ -14,8 +14,9 @@ spec:
       - controlcenter.mtls.aksdomain.xyz
       - ksqldb.mtls.aksdomain.xyz
       - connect.mtls.aksdomain.xyz
+      - schema-registry.mtls.aksdomain.xyz      
       # This assumes tls-secret exists and the SSL
-      # certificate contains a CN for aksdomain.xyz
+      # certificate contains a CN for mtls.aksdomain.xyz
       secretName: tls-nginx-cert
   rules:
     - host: mds.mtls.aksdomain.xyz
@@ -24,21 +25,31 @@ spec:
           - backend:
               serviceName: mds-bootstrap
               servicePort: 8090
+
     - host: controlcenter.mtls.aksdomain.xyz
       http:
         paths:
           - backend:
               serviceName: controlcenter-0-internal
               servicePort: 9021
+
     - host: ksqldb.mtls.aksdomain.xyz
       http:
         paths:
           - backend:
               serviceName: ksqldb-bootstrap
               servicePort: 8088
+
     - host: connect.mtls.aksdomain.xyz
       http:
         paths:
           - backend:
               serviceName: connect-bootstrap
               servicePort: 8083
+
+    - host: schema-registry.mtls.aksdomain.xyz
+      http:
+        paths:
+          - backend:
+              serviceName: schemaregistry-0-internal
+              servicePort: 8081               
