--- a/security/internal_external-tls_mtls_confluent-rbac/ingress-service-hostbased.yaml
+++ b/security/internal_external-tls_mtls_confluent-rbac/ingress-service-hostbased.yaml
@@ -12,6 +12,7 @@ spec:
     - hosts:
       - mds.mtls.aksdomain.xyz
       - controlcenter.mtls.aksdomain.xyz
+      - c3.mtls.aksdomain.xyz
       - ksqldb.mtls.aksdomain.xyz
       - connect.mtls.aksdomain.xyz
       - schema-registry.mtls.aksdomain.xyz      
@@ -32,6 +33,13 @@ spec:
           - backend:
               serviceName: controlcenter-0-internal
               servicePort: 9021
+
+    - host: c3.mtls.aksdomain.xyz
+      http:
+        paths:
+          - backend:
+              serviceName: controlcenter-0-internal
+              servicePort: 9021              
 
     - host: ksqldb.mtls.aksdomain.xyz
       http:
